Fixed flexbox overflow scrolling issues in firefox
Fixes #111

--- a/resources/assets/sass/_pages.scss
+++ b/resources/assets/sass/_pages.scss
@@ -49,7 +49,7 @@
     height:auto;
   }
   h1, h2, h3, h4, h5, h6 {
-    clear: both;
+    clear: left;
   }
   hr {
     clear: both;
@@ -72,7 +72,7 @@
 .pointer {
   border: 1px solid #CCC;
   display: inline-block;
-  padding: $-xs $-s;
+  padding: $-s $-s;
   border-radius: 4px;
   box-shadow: 0 0 8px 1px rgba(212, 209, 209, 0.35);
   position: absolute;
@@ -135,6 +135,7 @@
   display: flex;
   transition: width ease-in-out 180ms;
   margin-top: -1px;
+  min-height: 0px;
   &.open {
     width: 480px;
   }
@@ -182,6 +183,8 @@
     display: flex;
     flex: 1;
     flex-direction: column;
+    min-height: 0px;
+    overflow-y: scroll;
   }
   div[tab-content] .padded {
     flex: 1;
@@ -240,6 +243,8 @@
   min-width: 180px;
   max-width: 320px;
   opacity: 0.7;
+  z-index: 5;
+  position: relative;
   table {
     width: 100%;
     margin: 0;
